--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
-    "tachyons": "^4.11.1"
+    "tachyons": "^4.11.1",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
