--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "latest",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-fuzzy": "^0.5.2",
     "react-scripts": "1.1.5",
     "react-treebeard": "^2.1.0",
     "tachyons": "^4.11.1"
