--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "printWidth": 70
   },
   "dependencies": {
+    "chance": "^1.0.16",
     "classname": "^0.0.0",
+    "faker": "^4.1.0",
     "prop-types": "latest",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
