--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chance": "^1.0.16",
     "classname": "^0.0.0",
     "faker": "^4.1.0",
+    "json-schema-faker": "^0.5.0-rc15",
     "prop-types": "latest",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
