--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classname": "^0.0.0",
     "faker": "^4.1.0",
     "json-schema-faker": "^0.5.0-rc15",
+    "nanoid": "^1.2.1",
     "prop-types": "latest",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
