--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "json-schema-server": "^0.4.0",
     "nodemon": "^1.18.3"
   }
 }
