--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "classname": "^0.0.0",
     "faker": "^4.1.0",
     "json-schema-faker": "^0.5.0-rc15",
+    "lodash": "latest",
     "nanoid": "^1.2.1",
     "prop-types": "latest",
+    "ramda": "^0.25.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-fuzzy": "^0.5.2",
