--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "tabWidth": 2,
     "printWidth": 70
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "dependencies": {
     "chance": "^1.0.16",
     "classname": "^0.0.0",
@@ -44,6 +55,8 @@
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "husky": "^1.0.0-rc.13",
+    "lint-staged": "^7.2.2",
     "nodemon": "^1.18.3"
   }
 }
