--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "post-commit": "git update-index -g"
     }
   },
   "lint-staged": {
     "*.{js,json,css,md}": [
-      "prettier --write"
+      "prettier --write",
+      "git add"
     ]
   },
   "scripts": {
