--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-fuzzy": "^0.5.2",
     "react-scripts": "1.1.5",
     "react-treebeard": "^2.1.0",
+    "recompose": "^0.28.2",
     "tachyons": "^4.11.1"
   },
   "devDependencies": {
