--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-fuzzy": "^0.5.2",
+    "react-hotkeys": "^1.1.4",
     "react-scripts": "1.1.5",
     "react-treebeard": "^2.1.0",
     "recompose": "^0.28.2",
