--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "lint-staged": {
     "*.{js,json,css,md}": [
-      "prettier --write",
+      "prettier --config package.json --write",
       "git add"
     ]
   },
