--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "prettier": {
     "trailingComma": "all",
-    "arrowParens": "avoid",
+    "arrowParens": "always",
     "singleQuote": true,
     "semi": false,
-    "tabWidth": 2,
     "printWidth": 80
   },
   "husky": {
