--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     ]
   },
   "scripts": {
-    "start": "REACT_EDITOR=webstorm react-scripts start",
+    "start": "cross-env REACT_EDITOR=webstorm react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
