--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
+    "cross-env": "^5.2.0",
     "husky": "^1.0.0-rc.13",
     "jake": "^8.0.18",
     "lint-staged": "^7.2.2",
