--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@storybook/addons": "^3.4.10",
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
+    "babel-plugin-empower-assert": "^1.4.0",
+    "babel-plugin-espower": "^2.4.0",
     "babel-runtime": "^6.26.0",
     "cross-env": "^5.2.0",
     "husky": "^1.0.0-rc.13",
@@ -72,6 +74,8 @@
     "lint-staged": "^7.2.2",
     "nodemon": "^1.18.3",
     "plop": "^2.1.0",
+    "power-assert": "^1.6.0",
+    "react-app-rewired": "^1.5.2",
     "runjs": "^4.3.2"
   }
 }
