--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chance": "^1.0.16",
     "classname": "^0.0.0",
     "faker": "^4.1.0",
+    "freactal": "^2.0.3",
     "json-schema-faker": "^0.5.0-rc15",
     "nanoid": "^1.2.1",
     "prop-types": "latest",
