--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "faker": "^4.1.0",
     "freactal": "^2.0.3",
     "json-schema-faker": "^0.5.0-rc15",
+    "mobx": "^5.1.0",
     "nanoid": "^1.2.1",
     "prop-types": "latest",
     "radium": "latest",
