--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "freactal": "^2.0.3",
     "json-schema-faker": "^0.5.0-rc15",
     "mobx": "^5.1.0",
+    "mobx-react": "^5.2.5",
     "nanoid": "^1.2.1",
     "prop-types": "latest",
     "radium": "latest",
