--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "json-schema-faker": "^0.5.0-rc15",
     "mobx": "^5.1.0",
     "mobx-react": "^5.2.5",
+    "mobx-utils": "^5.0.1",
     "nanoid": "^1.2.1",
     "prop-types": "latest",
     "radium": "latest",
