--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "radium": "latest",
     "raf-schd": "^4.0.0",
     "ramda": "^0.25.0",
+    "ramda-adjunct": "^2.9.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-fuzzy": "^0.5.2",
@@ -72,6 +73,8 @@
     "styled-components": "^3.4.5",
     "styled-tools": "^1.4.3",
     "tachyons": "^4.11.1",
+    "tinyfunk": "^1.2.1",
+    "treis": "^2.6.0",
     "webpack-chain": "^4.9.0"
   },
   "devDependencies": {
